--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Todo App</title>
+    <title>App Title</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="app-root"></div>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
