trying to get css to work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>App Title</title>
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     <div class="app-root"></div>
